update: colors + readme.md

--- a/app/globals.css
+++ b/app/globals.css
@@ -84,5 +84,5 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(to bottom, #f472b6, #c4b5fd);
+  background: linear-gradient(to bottom, #1e40af, #3b82f6);
 }
